--- a/app/styles/helpers/fonts.sass
+++ b/app/styles/helpers/fonts.sass
@@ -1,3 +1,3 @@
 @import "mixins"
 
-+font-face("roboto", "../../fonts/RobotoRegular/RobotoRegular")
++font-face("PTSans-Regular", "../../fonts/PTSans-Regular/PTSans-Regular")
