--- a/app/styles/helpers/fonts.sass
+++ b/app/styles/helpers/fonts.sass
@@ -1,3 +1,35 @@
-@import "mixins"
+@font-face
+  font-family: 'PT Sans'
+  src: url('../../fonts/PT_Sans/PT_Sans.eot')
+  src: url('../../fonts/PT_Sans/PT_Sans.eot?iefix') format('eot'),
+  url('../../fonts/PT_Sans/PT_Sans.woff') format('woff'),
+  url('../../fonts/PT_Sans/PT_Sans.ttf') format('truetype')
+  font-weight: normal
+  font-style: normal
 
-+font-face("PTSans-Regular", "../../fonts/PTSans-Regular/PTSans-Regular")
+@font-face
+  font-family: 'PT Sans Bold'
+  src: url('../../fonts/PT_Sans_Bold/PT_Sans_Bold.eot')
+  src: url('../../fonts/PT_Sans_Bold/PT_Sans_Bold.eot?iefix') format('eot'),
+  url('../../fonts/PT_Sans_Bold/PT_Sans_Bold.woff') format('woff'),
+  url('../../fonts/PT_Sans_Bold/PT_Sans_Bold.ttf') format('truetype')
+  font-weight: 700
+  font-style: normal
+
+@font-face
+  font-family: 'PT Sans Bold Italic'
+  src: url('../../fonts/PT_Sans_Bold_Italic/PT_Sans_Bold_Italic.eot')
+  src: url('../../fonts/PT_Sans_Bold_Italic/PT_Sans_Bold_Italic.eot?iefix') format('eot'),
+  url('../../fonts/PT_Sans_Bold_Italic/PT_Sans_Bold_Italic.woff') format('woff'),
+  url('../../fonts/PT_Sans_Bold_Italic/PT_Sans_Bold_Italic.ttf') format('truetype')
+  font-weight: 700
+  font-style: italic
+
+@font-face
+  font-family: 'PT Sans Italic'
+  src: url('../../fonts/PT_Sans_Italic/PT_Sans_Italic.eot')
+  src: url('../../fonts/PT_Sans_Italic/PT_Sans_Italic.eot?iefix') format('eot'),
+  url('../../fonts/PT_Sans_Italic/PT_Sans_Italic.woff') format('woff'),
+  url('../../fonts/PT_Sans_Italic/PT_Sans_Italic.ttf') format('truetype')
+  font-weight: 700
+  font-style: italic
