--- a/app/styles/helpers/mixins.sass
+++ b/app/styles/helpers/mixins.sass
@@ -5,7 +5,7 @@
     font-style: $style
 
     @if $asset-pipeline == true
-      src: font-url('#{$file-path}.eot')
+      src: url('#{$file-path}.eot')
       src: font-url('#{$file-path}.eot?#iefix') format('embedded-opentype'), font-url('#{$file-path}.woff') format('woff'), font-url('#{$file-path}.ttf') format('truetype')
     @else
       src: url('#{$file-path}.eot')
