--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -2,6 +2,22 @@
 @import 'helpers/libs'
 @import 'helpers/vars'
 
+h1, h2, h3, h4, h5, h6
+  padding: 0
+  margin: 0
+
+ul,li
+  margin: 0
+  padding: 0
+  list-style-type: none
+
+p, pre
+  margin: 0
+
+input,
+select,
+button
+  outline: none
 
 .page
   font-size: 18px
@@ -18,15 +34,21 @@
   background: $main-color url('../img/header_background.jpg') center no-repeat
   color: #fff
 
+
 .header__inner
   display: flex
   justify-content: space-between
   align-items: center
+
+.container
   max-width: 1170px
   margin: 0 auto
 
 .menu__hamburger
   margin-right: 15px
+
+.menu
+  cursor: pointer
 
 .hamburger
   display: inline-block
@@ -46,6 +68,7 @@
   background-color: #fff
   position: absolute
   border-radius: 4px
+  transition: all 0.15s ease
 
 .hamburger__inner::before, .hamburger__inner::after
   content: ''
@@ -55,6 +78,16 @@
   top: 50%
   left: 25%
 
+.hamburger__inner.is-active
+  transform: rotate(45deg)
+
+.hamburger__inner.is-active::before
+  top: 0
+
+.hamburger__inner.is-active::after
+  transform: rotate(90deg)
+  top: 0
+
 .hamburger__inner::before
   top: -8px
 
@@ -63,6 +96,31 @@
 
 .menu__text
   display: inline-block
+
+.nav
+  position: absolute
+  background-color: #fff
+  z-index: 1
+  opacity: 0
+  top: 80px
+  transition: all 0.15s linear
+
+.is-visible
+  display: block
+  opacity: 1
+
+.nav__item
+  padding: 9px 20px
+  border-bottom: 1px solid $main-color
+  transition: all 0.25s linear
+  color: $main-color
+  &:hover
+    background-color: $main-color
+    color: #fff
+
+.nav__link
+  color: inherit
+  text-decoration: none
 
 .text
   display: block
@@ -78,6 +136,7 @@
 .logo
   width: 140px
   height: 70px
+  z-index: 1
 
 .telephone
   position: relative
@@ -111,5 +170,35 @@
 .button__text
   text-decoration: none
   color: #fff
+
+
+.promo
+  background: #fff url(../img/main_background.jpg) center no-repeat
+  min-height: 691px
+  background-size: cover
+  position: relative
+
+.promo::after
+  display: block
+  content: ""
+  width: 100%
+  height: 19px
+  position: absolute
+  bottom: 0
+  background: url(../img/wave.png) 0 0 repeat-x
+
+.promo__inner
+  position: absolute
+  bottom: 60px
+  left: 50%
+  transform: translateX(-50%)
+
+.promo__title
+  font-size: 30px
+  line-height: 1.6
+  color: #fff
+  white-space: nowrap
+
+
 
 @import "helpers/media"
