--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -81,6 +81,22 @@ html
                             |Наш 10 летний опыт организации свадебных торжеств<br>
                             |Поможет Вам сэкономить до 15% от свадебного бюджета<br>
                             |И около 3-х месяцев, самостоятельной подготовки.
+            section.about
+                div.about__inner.container
+                    iframe.video.about__video(width="100%" height="310" src="https://www.youtube.com/embed/J_WHx738YB8?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen)
+                    div.information
+                        h2.section__title.information__title О нас
+                        p.information__text
+                            strong Emerald
+                            | (в переводе с англ.) – изумруд, драгоценный камень с множеством граней, он олицетворяет нашу деятельность, наш подход к каждому мероприятию.
+                        p.information__text
+                            strong Наша основная задача
+                            | - услышать пожелания клиента и воплотить в жизнь его мечту, какой бы смелой она ни казалась. При этом, мы абсолютно убеждены, что хороший праздник зависит не от количества вложенных в него денег, а от подхода и профессионализма команды, которая работает над проектом.
+                        p.information__text
+                            strong Команда Emerald
+                            | – это целый мир, который дарит мечты.
+                        span.instagram_link #МойМирМойEmerald
+
 
 footer.footer.page__footer
 
