--- a/app/styles/helpers/fonts.sass
+++ b/app/styles/helpers/fonts.sass
@@ -8,28 +8,13 @@
   font-style: normal
 
 @font-face
-  font-family: 'PT Sans Bold'
-  src: url('../../fonts/PT_Sans_Bold/PT_Sans_Bold.eot')
-  src: url('../../fonts/PT_Sans_Bold/PT_Sans_Bold.eot?iefix') format('eot'),
-  url('../../fonts/PT_Sans_Bold/PT_Sans_Bold.woff') format('woff'),
-  url('../../fonts/PT_Sans_Bold/PT_Sans_Bold.ttf') format('truetype')
-  font-weight: 700
+  font-family: 'Kurale'
+  src: url('../../fonts/Kurale/kurale-v3-cyrillic_latin-regular.eot')
+  src: local('Kurale Regular'), local('Kurale-Regular'),
+  url('../../fonts/Kurale/kurale-v3-cyrillic_latin-regular.eot?#iefix') format('embedded-opentype'),
+  url('../../fonts/Kurale/kurale-v3-cyrillic_latin-regular.woff2') format('woff2'),
+  url('../../fonts/Kurale/kurale-v3-cyrillic_latin-regular.woff') format('woff'),
+  url('../../fonts/Kurale/kurale-v3-cyrillic_latin-regular.ttf') format('truetype'),
+  url('../../fonts/Kurale/kurale-v3-cyrillic_latin-regular.svg#Kurale') format('svg')
   font-style: normal
-
-@font-face
-  font-family: 'PT Sans Bold Italic'
-  src: url('../../fonts/PT_Sans_Bold_Italic/PT_Sans_Bold_Italic.eot')
-  src: url('../../fonts/PT_Sans_Bold_Italic/PT_Sans_Bold_Italic.eot?iefix') format('eot'),
-  url('../../fonts/PT_Sans_Bold_Italic/PT_Sans_Bold_Italic.woff') format('woff'),
-  url('../../fonts/PT_Sans_Bold_Italic/PT_Sans_Bold_Italic.ttf') format('truetype')
-  font-weight: 700
-  font-style: italic
-
-@font-face
-  font-family: 'PT Sans Italic'
-  src: url('../../fonts/PT_Sans_Italic/PT_Sans_Italic.eot')
-  src: url('../../fonts/PT_Sans_Italic/PT_Sans_Italic.eot?iefix') format('eot'),
-  url('../../fonts/PT_Sans_Italic/PT_Sans_Italic.woff') format('woff'),
-  url('../../fonts/PT_Sans_Italic/PT_Sans_Italic.ttf') format('truetype')
-  font-weight: 700
-  font-style: italic
+  font-weight: 400
