add section services, make spritesheet for icons

--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -76,14 +76,14 @@ html
 
         main.main
             section.promo
-                div.promo__inner
+                div.promo__inner.container
                     h1.promo__title
                             |Наш 10 летний опыт организации свадебных торжеств<br>
                             |Поможет Вам сэкономить до 15% от свадебного бюджета<br>
                             |И около 3-х месяцев, самостоятельной подготовки.
             section.about
                 div.about__inner.container
-                    iframe.video.about__video(width="100%" height="310" src="https://www.youtube.com/embed/J_WHx738YB8?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen)
+                    iframe.video.about__video(width="100%" height="310" src="https://www.youtube.com/embed/J_WHx738YB8?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
                     div.information
                         h2.section__title.information__title О нас
                         p.information__text
@@ -96,6 +96,35 @@ html
                             strong Команда Emerald
                             | – это целый мир, который дарит мечты.
                         span.instagram_link #МойМирМойEmerald
+            section.services
+                div.services__inner.container
+                    h2.section__title.section__title_white Услуги
+                    div.services_box
+                        div.item.item_organisation
+                            div.item__title Организация
+                            p.item__text
+                            |У нас не было, нет и никогда не будет готовых предложений с набором опций. #[b Свадьба – это маленькая жизнь со своей историей и душой.]
+                        div.item.item_host
+                            div.item__title Ведущий
+                            p.item__text
+                            |В нашей команде #[b более 30 ведущих] разделяющих наше видение на свадебное торжество.
+                        div.item.item_photograph.item_center
+                            div.item__title Фотограф/Видеооператор
+                            p.item__text
+                            |В нашей медиа-команде #[b более 20 специалистов], проверенных нами.
+                        div.item.item_decoration.item_center
+                            div.item__title Декор
+                            p.item__text Команда декораторов нашей службы торжеств поможет Вам выбрать #[b стиль и цветовое решение] Вашей свадьбы.
+                        div.item.item_banket.item_center
+                            div.item__title Банкет
+                            p.item__text Наша банкетная служба удовлетворит #[b любые вкусовые предпочтения] даже самого изысканного гурмана.
+                        div.item.item_registration
+                            div.item__title Выездная регистрация
+                            p.item__text Выслушав #[b Ваши пожелания, предпочтения и мечту] – как должна пройти эта красивая история, мы поможем ее осуществить.
+                        div.item.item_artists
+                            div.item__title Артисты
+                            p.item__text Разнообразить артистами зону велком, украсить банкетный вечер ярким выступлением, #[b поставить «вишенку на торт» в завершении вечера.]
+
 
 
 footer.footer.page__footer
