--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -95,35 +95,87 @@ html
                         p.information__text
                             strong Команда Emerald
                             | – это целый мир, который дарит мечты.
-                        span.instagram_link #МойМирМойEmerald
+                        div.instagram
+                            span.instagram__link #МойМирМойEmerald
             section.services
                 div.services__inner.container
                     h2.section__title.section__title_white Услуги
                     div.services_box
-                        div.item.item_organisation
-                            div.item__title Организация
-                            p.item__text
+                        div.service_item.service_item_organisation
+                            div.service_item__title Организация
+                            p.service_item__text
                             |У нас не было, нет и никогда не будет готовых предложений с набором опций. #[b Свадьба – это маленькая жизнь со своей историей и душой.]
-                        div.item.item_host
-                            div.item__title Ведущий
-                            p.item__text
+                        div.service_item.service_item_host
+                            div.service_item__title Ведущий
+                            p.service_item__text
                             |В нашей команде #[b более 30 ведущих] разделяющих наше видение на свадебное торжество.
-                        div.item.item_photograph.item_center
-                            div.item__title Фотограф/Видеооператор
-                            p.item__text
+                        div.service_item.service_item_photograph.service_item_center
+                            div.service_item__title Фотограф/Видеооператор
+                            p.service_item__text
                             |В нашей медиа-команде #[b более 20 специалистов], проверенных нами.
-                        div.item.item_decoration.item_center
-                            div.item__title Декор
-                            p.item__text Команда декораторов нашей службы торжеств поможет Вам выбрать #[b стиль и цветовое решение] Вашей свадьбы.
-                        div.item.item_banket.item_center
-                            div.item__title Банкет
-                            p.item__text Наша банкетная служба удовлетворит #[b любые вкусовые предпочтения] даже самого изысканного гурмана.
-                        div.item.item_registration
-                            div.item__title Выездная регистрация
-                            p.item__text Выслушав #[b Ваши пожелания, предпочтения и мечту] – как должна пройти эта красивая история, мы поможем ее осуществить.
-                        div.item.item_artists
-                            div.item__title Артисты
-                            p.item__text Разнообразить артистами зону велком, украсить банкетный вечер ярким выступлением, #[b поставить «вишенку на торт» в завершении вечера.]
+                        div.service_item.service_item_decoration.service_item_center
+                            div.service_item__title Декор
+                            p.service_item__text Команда декораторов нашей службы торжеств поможет Вам выбрать #[b стиль и цветовое решение] Вашей свадьбы.
+                        div.service_item.service_item_banket.service_item_center
+                            div.service_item__title Банкет
+                            p.service_item__text Наша банкетная служба удовлетворит #[b любые вкусовые предпочтения] даже самого изысканного гурмана.
+                        div.service_item.service_item_registration
+                            div.service_item__title Выездная регистрация
+                            p.service_item__text Выслушав #[b Ваши пожелания, предпочтения и мечту] – как должна пройти эта красивая история, мы поможем ее осуществить.
+                        div.service_item.service_item_artists
+                            div.service_item__title Артисты
+                            p.service_item__text Разнообразить артистами зону велком, украсить банкетный вечер ярким выступлением, #[b поставить «вишенку на торт» в завершении вечера.]
+            section.portfolio
+                div.portfolio__inner.container
+                    h2.portfolio__title.section__title Портфолио
+                    div.porfolio_item__wrapper
+                        div.portfolio_item.portfolio_item_wide(style="background-image: url(../img/section_portfolio/portfolio_photo_1.png)")
+                            div.portfolio_item_description__wrapper
+                                span.portfolio_item__description Свадьба Александра и Юлии
+                            div.portfolio_item__icon
+                        div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_2.png)")
+                            div.portfolio_item_description__wrapper
+                                span.portfolio_item__description Свадьба Ярослава и Дарьи
+                            div.portfolio_item__icon
+                        div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_3.png)")
+                            div.portfolio_item_description__wrapper
+                                span.portfolio_item__description Свадьба Евгения и Тамары
+                            div.portfolio_item__icon
+                        div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_4.png)")
+                            div.portfolio_item_description__wrapper
+                                span.portfolio_item__description Свадьба Дмитрия и Анны
+                            div.portfolio_item__icon
+                        div.portfolio_item.portfolio_item_wide(style="background-image: url(../img/section_portfolio/portfolio_photo_5.png)")
+                            div.portfolio_item_description__wrapper
+                                span.portfolio_item__description Свадьба Александра и Анастасии
+                            div.portfolio_item__icon
+                        div.portfolio_item.portfolio_item_high(style="background-image: url(../img/section_portfolio/portfolio_photo_6.png)")
+                            div.portfolio_item_description__wrapper
+                                span.portfolio_item__description Свадьба Олега и Марины
+                            div.portfolio_item__icon
+                        div.portfolio_item.portfolio_item_wide(style="background-image: url(../img/section_portfolio/portfolio_photo_7.png)")
+                            div.portfolio_item_description__wrapper
+                                span.portfolio_item__description Свадьба Руслана и Оксаны
+                            div.portfolio_item__icon
+                        div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_8.png)")
+                            div.portfolio_item_description__wrapper
+                                span.portfolio_item__description Свадьба Валентина и Галины
+                            div.portfolio_item__icon
+                        div.portfolio_item.portfolio_item_wide(style="background-image: url(../img/section_portfolio/portfolio_photo_9.png)")
+                            div.portfolio_item_description__wrapper
+                                span.portfolio_item__description Свадьба Владислава и Дарьи
+                            div.portfolio_item__icon
+                        div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_10.png)")
+                            div.portfolio_item_description__wrapper
+                                span.portfolio_item__description Свадьба Михаила и Юлии
+                            div.portfolio_item__icon
+                        div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_11.png)")
+                            div.portfolio_item_description__wrapper
+                                span.portfolio_item__description Свадьба Петра и Марины
+                            div.portfolio_item__icon
+                    div.instagram
+                        span.instagram__text Следите за нами в инстаграмме:
+                        span.instagram__link.text_uppercase #my_world_my_emerald
 
 
 
