--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -133,42 +133,52 @@ html
                             div.portfolio_item_description__wrapper
                                 span.portfolio_item__description Свадьба Александра и Юлии
                             div.portfolio_item__icon
+
                         div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_2.png)")
                             div.portfolio_item_description__wrapper
                                 span.portfolio_item__description Свадьба Ярослава и Дарьи
                             div.portfolio_item__icon
+
                         div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_3.png)")
                             div.portfolio_item_description__wrapper
                                 span.portfolio_item__description Свадьба Евгения и Тамары
                             div.portfolio_item__icon
+
                         div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_4.png)")
                             div.portfolio_item_description__wrapper
                                 span.portfolio_item__description Свадьба Дмитрия и Анны
                             div.portfolio_item__icon
+
                         div.portfolio_item.portfolio_item_wide(style="background-image: url(../img/section_portfolio/portfolio_photo_5.png)")
                             div.portfolio_item_description__wrapper
                                 span.portfolio_item__description Свадьба Александра и Анастасии
                             div.portfolio_item__icon
+
                         div.portfolio_item.portfolio_item_high(style="background-image: url(../img/section_portfolio/portfolio_photo_6.png)")
                             div.portfolio_item_description__wrapper
                                 span.portfolio_item__description Свадьба Олега и Марины
                             div.portfolio_item__icon
+
                         div.portfolio_item.portfolio_item_wide(style="background-image: url(../img/section_portfolio/portfolio_photo_7.png)")
                             div.portfolio_item_description__wrapper
                                 span.portfolio_item__description Свадьба Руслана и Оксаны
                             div.portfolio_item__icon
+
                         div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_8.png)")
                             div.portfolio_item_description__wrapper
                                 span.portfolio_item__description Свадьба Валентина и Галины
                             div.portfolio_item__icon
+
                         div.portfolio_item.portfolio_item_wide(style="background-image: url(../img/section_portfolio/portfolio_photo_9.png)")
                             div.portfolio_item_description__wrapper
                                 span.portfolio_item__description Свадьба Владислава и Дарьи
                             div.portfolio_item__icon
+
                         div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_10.png)")
                             div.portfolio_item_description__wrapper
                                 span.portfolio_item__description Свадьба Михаила и Юлии
                             div.portfolio_item__icon
+
                         div.portfolio_item(style="background-image: url(../img/section_portfolio/portfolio_photo_11.png)")
                             div.portfolio_item_description__wrapper
                                 span.portfolio_item__description Свадьба Петра и Марины
@@ -176,9 +186,59 @@ html
                     div.instagram
                         span.instagram__text Следите за нами в инстаграмме:
                         span.instagram__link.text_uppercase #my_world_my_emerald
+            section.price
+                div.price__inner.container
+                    h2.price__title.section__title.section__title_white Стоимость
+                    div.prices__wrapper
+                        div.price_item
+                            div.price_item__title Свадебный #[br] распорядитель
+                            div.price_item__text
+                                span.price_item__paragraph.price_item__first_paragraph Ваш личный помощник, который решает все организационно-технический вопросы в день Вашего торжества:
+                                span.price_item__paragraph – Встречает и провожает гостей
+                                span.price_item__paragraph – Общается с банкетной службой ресторана
+                                span.price_item__paragraph – Следит за работой свадебного персонала (#[em фото, видео, артисты, ведущий, декоратор])
+                                span.price_item__paragraph – Отвечает за зону выездной регистрации
+                                span.price_item__paragraph – Отвечает на все волнующие вопросы
+                            div.price__box
+                                span.price__value 17 000
+                                span.price__icon
+
+                        div.price_item
+                            div.price_item__title Организация #[br]свадьбы
+                            div.price_item__text
+                                span.price_item__paragraph.price_item__first_paragraph Полное сопровождение «предсвадебного путешествия» для того, чтобы подготовка доставила удовольствие:
+                                span.price_item__paragraph – Уделим внимание всем деталям,
+                                span.price_item__paragraph поможем оптимизировать бюджет, порекомендуем надежных свадебных специалистов, наполним торжество
+                                span.price_item__paragraph Вашей душой.
+                                span.price_item__paragraph –В день свадьбы на площадке работают: #[em свадебный распорядитель+2 координатора].
+                                span.price_item__paragraph.price_item_big Вы отдыхаете!
+                            div.price__box
+                                span.price__value 37 000
+                                span.price__icon
+
+                        div.price_item
+                            div.price_item__title PREMIUM #[br] Организация свадьбы
+                            div.price_item__text
+                                span.price_item__paragraph.price_item__first_paragraph Это предложение идеально подходит для свадебных торжеств, если приглашённых гостей будет #[strong 100 и более человек].
+                                span.price_item__paragraph – Если в расписании свадебного дня запланирована насыщенная программа с развлечениями и артистами.
+                                span.price_item__paragraph – С утра ВАС будет сопровождать координатор, который возьмет на себя хлопоты первой половины дня.
+                                span.price_item__paragraph –В день свадьбы на площадке работают: #[em свадебный распорядитель+2 координатора].
+                            div.price__box
+                                span.price__value 57 000
+                                span.price__icon
 
 
+                    div.consultation__information
+                        span.consultation__text
+                            |Подробная консультация по телефону:
+                            a.consultation__telephone(href="tel:+74951955722")
+                                | +7 (495) 195-57-22
+                            |или оставьте заявку:
+                    div.button__wrapper
+                        div.button
+                            a.button__text.button__text_big(href="#")
+                                |Оставить заявку
 
-footer.footer.page__footer
+        footer.footer.page__footer
 
         script(src="js/main.js")
