--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -2,6 +2,9 @@
 @import 'helpers/libs'
 @import 'helpers/vars'
 
+div
+  box-sizing: border-box
+
 h1, h2, h3, h4, h5, h6
   padding: 0
   margin: 0
@@ -59,7 +62,6 @@ button
   height: 50px
   position: relative
   border: 2px solid #fff
-  box-sizing: border-box
   border-radius: 50%
 
 .hamburger__inner, .hamburger__inner::before, .hamburger__inner::after
@@ -75,8 +77,8 @@ button
   display: block
 
 .hamburger__inner
-  top: 50%
-  left: 25%
+  top: 22px
+  left: 11px
 
 .hamburger__inner.is-active
   transform: rotate(45deg)
@@ -102,6 +104,7 @@ button
   background-color: #fff
   z-index: 1
   opacity: 0
+  display: none
   top: 80px
   transition: all 0.15s linear
 
@@ -160,17 +163,25 @@ button
   text-decoration: none
   font-size: 18px
 
+
 .button
+  display: inline-block
   font-size: 18px
   border: 2px solid #fff
   border-radius: 25px
-  background-color: #007558
+  background-color: $main-color
   padding: 0 20px
+  cursor: pointer
+  &:hover
+    background-color: #fff
+
 
 .button__text
   text-decoration: none
   color: #fff
 
+.button:hover .button__text
+  color: $main-color
 
 .promo
   background: #fff url(../img/main_background.jpg) center no-repeat
@@ -253,7 +264,7 @@ button
   line-height: 1
 
 .services
-  background: $main-color url(../img/services_background.jpg) center no-repeat
+  background: $main-color url(../img/section_services/services_background.jpg) center no-repeat
   background-size: cover
   position: relative
   &::after
@@ -262,7 +273,7 @@ button
     width: 100%
     height: 19px
     position: absolute
-    top: 0
+    top: -1px
     background: url(../img/wave.png) 0 0 repeat-x
     transform: rotateX(180deg)
 
@@ -279,7 +290,6 @@ button
   position: relative
   flex-basis: auto
   width: 32%
-  box-sizing: border-box
   color: #fff
   margin: 0 5px 40px
   padding-left: 180px
@@ -396,7 +406,95 @@ button
     background: url(../img/svg/search.svg) 0 0 no-repeat
     background-size: 100%
 
+.price
+  background: $main-color url(../img/section_price/price_background.jpg) center no-repeat
+  background-size: cover
+  position: relative
 
+.price__inner
+  padding: 65px 0 80px
 
+.prices__wrapper
+  display: flex
+  justify-content: space-between
+  margin-top: 30px
+
+.price_item
+  width: 31%
+  background-color: #fff
+  padding: 15px 25px 30px
+  color: $main-color
+  border-radius: 15px
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+
+.price_item__title
+  font-size: 24px
+  text-transform: uppercase
+  text-align: center
+  margin-bottom: 10px
+  font-weight: 700
+  line-height: 1.3
+  padding-bottom: 10px
+  border-bottom: 1px solid $main-color
+
+.price_item__paragraph
+  display: block
+  text-align: center
+  line-height: 1.3
+
+.price_item__first_paragraph
+  margin-bottom: 10px
+
+.price_item_big
+  font-weight: 700
+  font-size: 20px
+
+.price__box
+  margin: 30px auto 0
+  width: 260px
+  height: 61px
+  text-align: center
+  background: url(../img/section_price/price_box.png) 0 0 no-repeat
+  background-size: 100%
+
+.price__value
+  font-size: 42px
+  font-weight: 700
+  line-height: 1.45
+  color: #fff
+
+.price__icon
+  margin-left: 15px
+  display: inline-block
+  width: 33px
+  height: 33px
+  background: url(../img/svg/ruble.svg) 0 0 no-repeat
+  background-size: 100%
+
+.consultation__information
+  margin: 35px 0 30px
+  text-align: center
+
+.consultation__text
+  color: #fff
+  font-size: 28px
+
+.consultation__telephone
+  color: #fff
+  display: inline-block
+  margin: 0 10px
+  text-decoration: none
+  font-size: 28px
+  font-weight: 700
+
+.button__wrapper
+  text-align: center
+
+.button__text_big
+  font-size: 24px
+  text-align: center
+  padding: 0 30px
 
 @import "helpers/media"
