add section team

--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -239,6 +239,71 @@ html
                             a.button__text.button__text_big(href="#")
                                 |Оставить заявку
 
+            section.team
+                div.team__inner.container
+                    h2.team__title.section__title Наша команда
+                    div.team__wrapper
+                        div.ceo
+                            div.ceo__photo(style="background-image: url(../img/section_team/member_photo_1.png)")
+                            div.ceo__text
+                                div.ceo__name Алиса Истомина
+                                div.ceo__post Основатель Группы компаний Emerald
+                                div.ceo__work Генеральный директор #[br] Организатор, Ведущая
+                                div.ceo__motto «Наша миссия - нести в массы культуру мероприятий. Любое торжество - свадьба, корпоратив или день рождение - это не банкет с тамадой и набором артистов. Это гораздо глубже, больше. Это эмоции и ощущения, с которыми человек уходит домой, поэтому у каждого нашего праздника есть личная история и душа».
+                        div.team_members__wrapper
+                            div.member
+                                div.member__photo(style="background-image: url(../img/section_team/member_photo_2.png)")
+                                div.member__text
+                                    div.member__name Наталья Гудошникова
+                                    div.member__post Исполнительный директор Группы компаний Emerald
+                                    div.member__work Руководитель отдела организации #[br] Свадебный распорядитель
+                            div.member
+                                div.member__photo(style="background-image: url(../img/section_team/member_photo_3.png)")
+                                div.member__text
+                                    div.member__name Оксана Абросимова
+                                    div.member__post Организатор #[br] Свадебный распорядитель
+                                    div.member__work Координатор
+                            div.member
+                                div.member__photo(style="background-image: url(../img/section_team/member_photo_4.png)")
+                                div.member__text
+                                    div.member__name Мария Ершова
+                                    div.member__post Руководитель банкетной #[br] службы
+                                    div.member__work
+                            div.member
+                                div.member__photo(style="background-image: url(../img/section_team/member_photo_5.png)")
+                                div.member__text
+                                    div.member__name Сергей Прудников
+                                    div.member__post Руководитель направления «Emerald media»
+                                    div.member__work Фотограф
+                            div.member
+                                div.member__photo(style="background-image: url(../img/section_team/member_photo_6.png)")
+                                div.member__text
+                                    div.member__name Элона Губаз
+                                    div.member__post Руководитель направления «Декор от Emerald»
+                                    div.member__work Декоратор-флорист
+                            div.member
+                                div.member__photo(style="background-image: url(../img/section_team/member_photo_7.png)")
+                                div.member__text
+                                    div.member__name Артур Васильев
+                                    div.member__post Режиссер-постановщик мероприятий
+                                    div.member__work Сценарист #[br] Ведущий
+                            div.member
+                                div.member__photo(style="background-image: url(../img/section_team/member_photo_8.png)")
+                                div.member__text
+                                    div.member__name Ольга Меньшикова
+                                    div.member__post Руководитель направления «Emerald детям»
+                                    div.member__work
+                            div.member
+                                div.member__photo(style="background-image: url(../img/section_team/member_photo_9.png)")
+                                div.member__text
+                                    div.member__name Руслан Чачанов
+                                    div.member__post Руководитель направления по разработке корпоративных программ и тимбилдингов.
+                                    div.member__work
+
+
+
+
+
         footer.footer.page__footer
 
         script(src="js/main.js")
