add section partner

--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -304,6 +304,31 @@ html
 
 
 
+            section.partner
+                div.partner__inner.container
+                    h2.partner__title.section__title Наша площадка-партнер – #[br] Кафе-шатры «Русская сказка»
+                    div.photo__wrapper
+                        div.partner__photo(style="background-image: url(../img/section_partner/partner_1.jpg)")
+                        div.partner__photo.partner__photo_wide(style="background-image: url(../img/section_partner/partner_2.jpg)")
+                        div.partner__photo(style="background-image: url(../img/section_partner/partner_3.jpg)")
+                    div.partner-features__wrapper
+                        div.partner-feature__line
+                            div.partner-feature
+                                div.partner-feature__text – Располагается #[strong в Национальном конном парке «Русь»]
+                            div.partner-feature
+                                div.partner-feature__text – Есть возможность размещения на территории: молодоженам в #[strong двухкомнатном люксе], а остальным гостям мы можем предложить на выбор: #[strong гостиничные номера,  либо коттеджи]
+                        div.partner-feature__line
+                            div.partner-feature
+                                div.partner-feature__text – На территории комплекса размещены #[strong 3 белоснежных арочных шатра площадью 200кв. м]
+                            div.partner-feature
+                                div.partner-feature__text – Шатры имеют #[strong удобный заезд] и #[strong собственную парковку]
+                    div.partner__information
+                        div.partner__text Подробнее о площадке:
+                    div.button__wrapper
+                        div.button
+                            a.button__text.button__text_big(href="#")
+                                | Презентация PDF
+                            
         footer.footer.page__footer
 
         script(src="js/main.js")
