fix js libs, add jquery & slick, make section feedback

--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -328,7 +328,79 @@ html
                         div.button
                             a.button__text.button__text_big(href="#")
                                 | Презентация PDF
-                            
+
+
+            section.feedback
+                div.feedback__inner.container
+                    h2.feedback__title.section__title.section__title_white Отзывы
+                    div.feedback-slider
+                        div.feedback-slider__prev.feedback-slider__control
+                        div.feedback-slider__next.feedback-slider__control
+                        div.feedback-slider-js
+                            div.feedback-slider__column
+                                div.feedback-slider__item
+                                    div.feedback-slider__author
+                                        div.feedback-slider__photo(style="background-image: url(../img/section_feedback/feedback_photo_1.png)")
+                                        div.feedback-slider__name Наталья, #[br] Владимир
+                                        div.feedback-slider__date 7 мая 2016
+                                    div.feedback-slider__text "Дорогие Алиса и Наташа, хочется поблагодарить вас и вашу команду за организацию нашей свадьбы! #[strong Вы очень тёплые, позитивные, мастера своего дела!] К сожалению, не удалось сказать слова благодарности на свадьбе, при торжественной обстановке, но думаю, мы ещё встретимся с вами, повод для праздника найдём). Процветания вам, только положительных эмоций, не капризных молодожёнов))"
+                                div.feedback-slider__item
+                                    div.feedback-slider__author
+                                        div.feedback-slider__photo(style="background-image: url(../img/section_feedback/feedback_photo_2.png)")
+                                        div.feedback-slider__name Артём,
+                                        div.feedback-slider__name Анна
+                                        div.feedback-slider__date 24 июня 2016
+                                    div.feedback-slider__text "В преддверии своей свадьбы я волновалась, как и большинство невест, и понимала, что она вряд ли может быть идеальной. Но! Я глубоко ошибалась! #[strong Свадьба может быть идеальной, солнечной, прекрасной, искренней и весёлой, потому что у нас она такой и была!] Этот день стал для нас с теперь уже мужем одним из самых счастливых дней в жизни. И всё благодаря прекрасным организаторам Наталье и Алисе."
+                            div.feedback-slider__column
+                                div.feedback-slider__item
+                                    div.feedback-slider__author
+                                        div.feedback-slider__photo(style="background-image: url(../img/section_feedback/feedback_photo_3.png)")
+                                        div.feedback-slider__name Артур,
+                                        div.feedback-slider__name Кристина
+                                        div.feedback-slider__date 14 мая 2016
+                                    div.feedback-slider__text "Время для благодарностей! #[strong Страна должна знать своих героев в лицо!] Эти две волшебные девочки делают любой праздник сказкой! Самые добрые, внимательные, отзывчивые организаторы на свете! Ребята, мы счастливы, что вы были с нами! Вы потрясающая команда! Команда профессиональная, понимающая, внимательная! Столько потрясающих людей вместе - это клад!!! Спасибо за лучший день в нашей жизни!!! "
+                                div.feedback-slider__item
+                                    div.feedback-slider__author
+                                        div.feedback-slider__photo(style="background-image: url(../img/section_feedback/feedback_photo_4.png)")
+                                        div.feedback-slider__name Юра и Таня
+                                        div.feedback-slider__date 2 июля 2016
+                                    div.feedback-slider__text #[strong Таня:] "Это было незабываемо!!! Спасибо вам огромное!!!!!!!"#[br] #[strong Юра:] "Я добавлю, пусть это прозвучит более официально, но коротко, профессионалы и люди любящие своё дело!#[br] #[strong А не официально, просто бомба!]"
+                            div.feedback-slider__column
+                                div.feedback-slider__item
+                                    div.feedback-slider__author
+                                        div.feedback-slider__photo(style="background-image: url(../img/section_feedback/feedback_photo_5.jpg)")
+                                        div.feedback-slider__name Павел, #[br] Мария
+                                        div.feedback-slider__date 17 мая 2017
+                                    div.feedback-slider__text "Дорогие Алиса и Наташа, хочется поблагодарить вас и вашу команду за организацию нашей свадьбы! #[strong Вы очень тёплые, позитивные, мастера своего дела!] К сожалению, не удалось сказать слова благодарности на свадьбе, при торжественной обстановке, но думаю, мы ещё встретимся с вами, повод для праздника найдём). Процветания вам, только положительных эмоций, не капризных молодожёнов))"
+                                div.feedback-slider__item
+                                    div.feedback-slider__author
+                                        div.feedback-slider__photo(style="background-image: url(../img/section_feedback/feedback_photo_6.jpg)")
+                                        div.feedback-slider__name Аркадий,
+                                        div.feedback-slider__name Виктория
+                                        div.feedback-slider__date 14 августа 2015
+                                    div.feedback-slider__text "В преддверии своей свадьбы я волновалась, как и большинство невест, и понимала, что она вряд ли может быть идеальной. Но! Я глубоко ошибалась! #[strong Свадьба может быть идеальной, солнечной, прекрасной, искренней и весёлой, потому что у нас она такой и была!] Этот день стал для нас с теперь уже мужем одним из самых счастливых дней в жизни. И всё благодаря прекрасным организаторам Наталье и Алисе."
+                            div.feedback-slider__column
+                                div.feedback-slider__item
+                                    div.feedback-slider__author
+                                        div.feedback-slider__photo(style="background-image: url(../img/section_feedback/feedback_photo_7.jpg)")
+                                        div.feedback-slider__name Кристина,
+                                        div.feedback-slider__name Майкл
+                                        div.feedback-slider__date 18 февраля 2016
+                                    div.feedback-slider__text "Время для благодарностей! #[strong Страна должна знать своих героев в лицо!] Эти две волшебные девочки делают любой праздник сказкой! Самые добрые, внимательные, отзывчивые организаторы на свете! Ребята, мы счастливы, что вы были с нами! Вы потрясающая команда! Команда профессиональная, понимающая, внимательная! Столько потрясающих людей вместе - это клад!!! Спасибо за лучший день в нашей жизни!!! "
+                                div.feedback-slider__item
+                                    div.feedback-slider__author
+                                        div.feedback-slider__photo(style="background-image: url(../img/section_feedback/feedback_photo_8.jpg)")
+                                        div.feedback-slider__name Таня и Юра
+                                        div.feedback-slider__date 2 июля 2016
+                                    div.feedback-slider__text #[strong Таня:] "Это было незабываемо!!! Спасибо вам огромное!!!!!!!"#[br] #[strong Юра:] "Я добавлю, пусть это прозвучит более официально, но коротко, профессионалы и люди любящие своё дело!#[br] #[strong А не официально, просто бомба!]"
+
+
+
+
+
         footer.footer.page__footer
 
+        script(src="js/jquery.min.js")
+        script(src="js/libs.min.js")
         script(src="js/main.js")
+
