--- a/app/styles/helpers/libs.sass
+++ b/app/styles/helpers/libs.sass
@@ -1,1 +1,2 @@
-//@import '../../../node_modules/path_to_lib'
+@import "../../../node_modules/slick-carousel/slick/slick.scss"
+@import "../../../node_modules/slick-carousel/slick/slick-theme.scss"
