--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -2,7 +2,7 @@
 @import 'helpers/libs'
 @import 'helpers/vars'
 
-div
+*, *::after, *::before
   box-sizing: border-box
 
 h1, h2, h3, h4, h5, h6
@@ -602,7 +602,7 @@ button
   position: relative
 
 .partner__inner
-  padding: 61px 0 85px
+  padding: 61px 0 75px
 
 .photo__wrapper
   display: flex
@@ -681,5 +681,85 @@ button
   font-size: 22px
   color: $main-color
   text-align: center
+
+.feedback
+  background: url(../img/section_feedback/feedback_background.png) center no-repeat
+  background-size: cover
+  position: relative
+  margin-top: -15px
+  margin-bottom: -15px
+  z-index: 1
+
+.feedback__inner
+  padding: 55px 0 80px
+
+.feedback-slider
+  margin-top: 40px
+  padding: 0 100px
+  position: relative
+  .slick-dots
+    li
+      button
+        border: 1px solid #fff
+        border-radius: 50%
+        &::before
+          display: none
+      &.slick-active
+        button
+          background-color: #fff
+  .feedback-slider__control
+    position: absolute
+    top: 45%
+
+    width: 45px
+    height: 45px
+    background: url(../img/svg/arrow.svg) 0 0 no-repeat
+    background-size: 100%
+    &.slick-disabled
+      opacity: 0.5
+  .feedback-slider__prev
+    left: 10px
+
+  .feedback-slider__next
+    transform: rotateY(-180deg)
+    right: 10px
+
+
+.feedback-slider__item
+  width: 100%
+  max-width: 465px
+  display: flex
+  justify-content: space-between
+  color: $main-color
+  height: 300px
+
+  border-radius: 15px
+  padding: 30px 20px
+  margin-bottom: 30px
+  background: #fff url(../img/section_feedback/feedback_item_background.png) right bottom no-repeat
+
+
+.feedback-slider__author
+  margin-right: 20px
+  text-align: center
+
+.feedback-slider__photo
+  width: 140px
+  height: 140px
+  margin-bottom: 10px
+  border-radius: 50%
+
+.feedback-slider__name
+  font-size: 24px
+  font-weight: 700
+  line-height: 1.3
+
+.feedback-slider__date
+  font-size: 20px
+
+.feedback-slider__text
+  font-size: 15px
+  font-style: italic
+  line-height: 1.2
 
 @import "helpers/media"
