add section projects

--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -330,6 +330,7 @@ html
                                 | Презентация PDF
 
 
+
             section.feedback
                 div.feedback__inner.container
                     h2.feedback__title.section__title.section__title_white Отзывы
@@ -393,6 +394,37 @@ html
                                         div.feedback-slider__name Таня и Юра
                                         div.feedback-slider__date 2 июля 2016
                                     div.feedback-slider__text #[strong Таня:] "Это было незабываемо!!! Спасибо вам огромное!!!!!!!"#[br] #[strong Юра:] "Я добавлю, пусть это прозвучит более официально, но коротко, профессионалы и люди любящие своё дело!#[br] #[strong А не официально, просто бомба!]"
+
+
+
+
+
+            section.projects
+                div.projects__inner.container
+                    h2.projects__title.section__title Наши не свадебные проекты
+                    span.projects__description Также, мы организуем такие мероприятия, как:
+                    ul.projects__list
+                        li.project__item
+                            div.project__photo.project__photo-1
+                            span.project__title Корпоративы
+                        li.project__item
+                            div.project__photo.project__photo-2
+                            span.project__title Дни рождения, юбилеи
+                        li.project__item
+                            div.project__photo.project__photo-3
+                            span.project__title Выпускные вечера, детские праздники
+                    div.projects__information
+                        span.projects__text
+                            | Узнать подробнее можете по телефону
+                            a.projects__telephone(href="tel:+74951955722")
+                                | +7 (495) 195-57-22
+                            | или заполните форму на следующем экране
+                    div.projects__navigation
+                        div.arrow-down
+
+
+
+
 
 
 
