--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -731,13 +731,11 @@ button
   display: flex
   justify-content: space-between
   color: $main-color
-  height: 300px
-
+  height: 310px
   border-radius: 15px
   padding: 30px 20px
   margin-bottom: 30px
   background: #fff url(../img/section_feedback/feedback_item_background.png) right bottom no-repeat
-
 
 .feedback-slider__author
   margin-right: 20px
@@ -761,5 +759,95 @@ button
   font-size: 15px
   font-style: italic
   line-height: 1.2
+
+.projects
+  background-color: #fff
+  background-size: cover
+  position: relative
+  &::before
+    display: block
+    content: ""
+    width: 100%
+    height: 19px
+    position: absolute
+    top: -1px
+    background: url(../img/wave.png) 0 0 repeat-x
+    z-index: 1
+  &::after
+    display: block
+    content: ""
+    width: 100%
+    height: 19px
+    position: absolute
+    bottom: -18px
+    background: url(../img/wave.png) 0 0 repeat-x
+    transform: rotateX(180deg)
+    z-index: 5
+
+.projects__inner
+  padding: 50px 0 40px
+
+.projects__description
+  display: block
+  text-align: center
+  color: $main-color
+  font-size: 28px
+
+.projects__list
+  margin: 20px 10px 30px
+  display: flex
+  justify-content: center
+
+.project__item
+  width: 255px
+  margin-right: 65px
+  &:last-child
+    margin-right: 0
+
+.project__photo
+
+  width: 165px
+  height: 165px
+  margin: 0 auto
+
+.project__photo-1
+  background: url(../img/section_projects/project_photo_1.png) 0 0 no-repeat
+
+.project__photo-2
+  background: url(../img/section_projects/project_photo_2.png) 0 0 no-repeat
+
+.project__photo-3
+  background: url(../img/section_projects/project_photo_3.png) 0 0 no-repeat
+
+.project__title
+  display: block
+  text-align: center
+  font-family: $title-font
+  font-size: 28px
+  color: $main-color
+
+.projects__information
+  color: $main-color
+  font-size: 26px
+  max-width: 685px
+  margin: 0 auto 50px
+  text-align: center
+  line-height: 1.5
+
+.projects__telephone
+  color: inherit
+  display: inline-block
+  margin: 0 10px
+  text-decoration: none
+  font-weight: 700
+
+.arrow-down
+  margin: 0 auto
+  width: 32px
+  height: 52px
+  background: url(../img/section_projects/arrow_down.png) 0 0 no-repeat
+  background-size: 100%
+
+
 
 @import "helpers/media"
